# VFMC

./: .flake8  .gitignore  BetaTesters.md  ChangeLog.md  Makefile  README.md  debug_hook.py  launcher.py  linux-x86.spec  macos-arm.spec  macos-x86.spec  pyproject.toml  requirements.freeze  requirements.txt  win-x86.spec
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  public-vfmc.yml  publish-pypi.yml  publish-vfmc-pypi.yml  publish-vfmc.yml  publish-vfmc_core.yml  release-binaries.yml
resources/: README-mac.txt  README-win.txt
rust-src/: Cargo.toml  README.md  pyproject.toml
rust-src/.cargo/: config.toml
rust-src/src/: dr.rs  eo.rs  finish.rs  fr.rs  htr.rs  insertions.rs  lib.rs  slice.rs  solver.rs
src/vfmc/: __init__.py  __main__.py  app.py  attempt.py  gl_viz.py  help.html  insertions.py  orientation.py  palette.py  prefs.py  viz.py
