[project]
name = "vfmc"
version = "1.0.1"

dependencies = [
  "pyquaternion~=0.9",
  "PyQt5~=5.15.0",
  "vfmc_core==1.0.1",
]

authors = [
  { name="Rodney Kinney", email="rodney.m.kinney@gmail.com" },
]
description = "A virtual FMC attempt tool"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = [
  "black~=25.1",
  "flake8~=7.2",
  "maturin~=1.8",
  "pyinstaller~=6.12",
  "build~=1.2",
  "twine~=6.1",
]

[project.license]
file = "LICENSE"
      
[project.urls]
Homepage = "https://github.com/rodneykinney/VFMC"

[project.scripts]
vfmc = "vfmc.app:main"

#[build-system]
#requires = ["maturin~=1.8"]
#build-backend = "maturin"
#
#[tool.maturin]
#python-source = "src"
#manifest-path = "rust-src/Cargo.toml"
#module-name = "vfmc_core"
#include = ["LICENSE"]
#bindings = "pyo3"
#sdist-include = ["src/vfmc/**/*", "LICENSE"]