[package]
name = "vfmc_core"
version = "1.0.2"
edition = "2021"

[lib]
name = "vfmc_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.0", features = ["extension-module"] }
cubelib = { path = "cubelib/cubelib", features = ["serde_support", "fs"]}
rand = "0.9.0"

[package.metadata.maturin]
python-source = "python"
